@@ -1,3 +1,12 @@
+2012-11-13  Ian Bolton  <ian.bolton@arm.com>
+
+	Backport from mainline
+	2012-11-12  Ian Bolton  <ian.bolton@arm.com>
+ 
+	* gcc.target/aarch64/cmn.c: New test.
+	* gcc.target/aarch64/adds.c: New test.
+	* gcc.target/aarch64/subs.c: New test.
+
 2012-11-07  Yufeng Zhang  <yufeng.zhang@arm.com>
 
 	* gcc.target/aarch64/dwarf-cfa-reg.c: New test.
