@@ -1,3 +1,10 @@
+2012-11-13  Ian Bolton  <ian.bolton@arm.com>
+
+	Backport from mainline
+	2012-11-12  Ian Bolton  <ian.bolton@arm.com>
+ 
+	* config/aarch64/aarch64.md (*compare_neg<mode>): New pattern.
+
 2012-11-08  Yufeng Zhang  <yufeng.zhang@arm.com>
 
 	Revert:
